--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "frontend",
   "version": "0.1.0",
+  "proxy": "http://localhost:8080/",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -15,7 +16,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "eslint": "^8",
