--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
+    "recharts": "^2.12.7",
     "validator": "^13.12.0"
   },
   "devDependencies": {
