--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,8 +1,6 @@
 {
-  "name": "frontend",
+  "name": "deco",
   "version": "0.1.0",
-  "proxy": "http://localhost:8080/",
-  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
